--- a/Belt_Exam Data_Viz.ipynb
+++ b/Belt_Exam Data_Viz.ipynb
@@ -1759,13 +1759,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 275,
+   "id": "e47b71fd-a014-4cc9-891e-7550ab23d5de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SizeRank</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>RegionType</th>\n",
+       "      <th>StateName</th>\n",
+       "      <th>State</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Home Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-31</th>\n",
+       "      <td>5</td>\n",
+       "      <td>90011</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>209250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-31</th>\n",
+       "      <td>8</td>\n",
+       "      <td>91331</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>257372.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-31</th>\n",
+       "      <td>9</td>\n",
+       "      <td>90650</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Norwalk</td>\n",
+       "      <td>296430.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-31</th>\n",
+       "      <td>12</td>\n",
+       "      <td>90201</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Bell</td>\n",
+       "      <td>271829.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-31</th>\n",
+       "      <td>13</td>\n",
+       "      <td>92335</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Fontana</td>\n",
+       "      <td>156704.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>30657</td>\n",
+       "      <td>95950</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Grimes</td>\n",
+       "      <td>220881.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>30657</td>\n",
+       "      <td>89041</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>Pahrump</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>30657</td>\n",
+       "      <td>98623</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>White Salmon</td>\n",
+       "      <td>538209.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>30657</td>\n",
+       "      <td>98628</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>Goldendale</td>\n",
+       "      <td>112436.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>30657</td>\n",
+       "      <td>98522</td>\n",
+       "      <td>zip</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>Chehalis</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>386892 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            SizeRank  RegionName RegionType StateName State          City  \\\n",
+       "Date                                                                        \n",
+       "2010-01-31         5       90011        zip        CA    CA   Los Angeles   \n",
+       "2010-01-31         8       91331        zip        CA    CA   Los Angeles   \n",
+       "2010-01-31         9       90650        zip        CA    CA       Norwalk   \n",
+       "2010-01-31        12       90201        zip        CA    CA          Bell   \n",
+       "2010-01-31        13       92335        zip        CA    CA       Fontana   \n",
+       "...              ...         ...        ...       ...   ...           ...   \n",
+       "2020-12-31     30657       95950        zip        CA    CA        Grimes   \n",
+       "2020-12-31     30657       89041        zip        NV    NV       Pahrump   \n",
+       "2020-12-31     30657       98623        zip        WA    WA  White Salmon   \n",
+       "2020-12-31     30657       98628        zip        WA    WA    Goldendale   \n",
+       "2020-12-31     30657       98522        zip        WA    WA      Chehalis   \n",
+       "\n",
+       "            Home Value  \n",
+       "Date                    \n",
+       "2010-01-31    209250.0  \n",
+       "2010-01-31    257372.0  \n",
+       "2010-01-31    296430.0  \n",
+       "2010-01-31    271829.0  \n",
+       "2010-01-31    156704.0  \n",
+       "...                ...  \n",
+       "2020-12-31    220881.0  \n",
+       "2020-12-31         NaN  \n",
+       "2020-12-31    538209.0  \n",
+       "2020-12-31    112436.0  \n",
+       "2020-12-31         NaN  \n",
+       "\n",
+       "[386892 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_for_tab =  df_tableau.drop(columns=['RegionID', 'Metro', 'CountyName'], axis = 1)\n",
+    "df_for_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "aa604d12-0ebe-4352-9c4c-73687c62907a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_tab.to_csv('Data/data-tableau.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
    "id": "343a2814-b261-43c1-9fd1-048d145d7e23",
    "metadata": {},
    "outputs": [],
    "source": [
     "## to Download this data in a “Data” folder\n",
-    "df_tableau.to_csv('Data/data-for-tableau.csv')"
+    "df_for_tab.to_csv('Data/data-for-tableau.csv')"
    ]
   },
   {
@@ -5546,12 +5760,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb557525-0a61-4a06-9043-3745835532f7",
+   "cell_type": "markdown",
+   "id": "36dd2667-f523-4b30-99fd-76d2943eb2a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### # Tableau Workbook"
+   ]
   },
   {
    "cell_type": "code",
