--- a/Belt_Exam Data_Viz.ipynb
+++ b/Belt_Exam Data_Viz.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "id": "b2cafb89-cd76-401b-9422-7a677e8dcc03",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "id": "9520d3e9-4c89-49b9-9bcd-c4346585a547",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "id": "033c7edb-ba92-4494-b454-74090cfb0e34",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "id": "2178e6e9-d5c7-42bf-b4ff-3ecfd5b051d4",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "id": "9b14fcdb-0aa8-45e5-9063-1ba45856c4ba",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "ab73bfb4-c086-403d-9238-d994b2747604",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "[5 rows x 284 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "5c775230-363e-4e7b-a805-242443f14ebf",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "      dtype='object', length=284)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "b1f57212-ae99-472f-b1e4-32312725b1e3",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "[7546550 rows x 11 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "dcc1d9f4-499c-481a-95de-b5f76d7f0923",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "Name: Date, Length: 7546550, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "005848c9-72de-4ac1-a985-27c690150695",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
        "[7546550 rows x 10 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,17 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8f13d03-3e83-4e63-8535-3b5752e23396",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CA, WA, OR, AZ, NV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "3141bf41-92be-4ddc-827d-73b8442bb828",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1457,7 @@
        "[806025 rows x 10 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "68e4c9d4-9269-4892-bb33-a320b21edf71",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1480,7 @@
        "array(['CA', 'WA', 'AZ', 'NV', 'OR'], dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "ecbdc6ef-9994-43c8-8721-7018115c632f",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1737,7 @@
        "[386892 rows x 10 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,232 +1749,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "id": "e47b71fd-a014-4cc9-891e-7550ab23d5de",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SizeRank</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>RegionType</th>\n",
-       "      <th>StateName</th>\n",
-       "      <th>State</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Home Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>5</td>\n",
-       "      <td>90011</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>209250.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>8</td>\n",
-       "      <td>91331</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>257372.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>9</td>\n",
-       "      <td>90650</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Norwalk</td>\n",
-       "      <td>296430.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>12</td>\n",
-       "      <td>90201</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Bell</td>\n",
-       "      <td>271829.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>13</td>\n",
-       "      <td>92335</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Fontana</td>\n",
-       "      <td>156704.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>30657</td>\n",
-       "      <td>95950</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Grimes</td>\n",
-       "      <td>220881.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>30657</td>\n",
-       "      <td>89041</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>NV</td>\n",
-       "      <td>NV</td>\n",
-       "      <td>Pahrump</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>30657</td>\n",
-       "      <td>98623</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>White Salmon</td>\n",
-       "      <td>538209.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>30657</td>\n",
-       "      <td>98628</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>Goldendale</td>\n",
-       "      <td>112436.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>30657</td>\n",
-       "      <td>98522</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>Chehalis</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>386892 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SizeRank  RegionName RegionType StateName State          City  \\\n",
-       "Date                                                                        \n",
-       "2010-01-31         5       90011        zip        CA    CA   Los Angeles   \n",
-       "2010-01-31         8       91331        zip        CA    CA   Los Angeles   \n",
-       "2010-01-31         9       90650        zip        CA    CA       Norwalk   \n",
-       "2010-01-31        12       90201        zip        CA    CA          Bell   \n",
-       "2010-01-31        13       92335        zip        CA    CA       Fontana   \n",
-       "...              ...         ...        ...       ...   ...           ...   \n",
-       "2020-12-31     30657       95950        zip        CA    CA        Grimes   \n",
-       "2020-12-31     30657       89041        zip        NV    NV       Pahrump   \n",
-       "2020-12-31     30657       98623        zip        WA    WA  White Salmon   \n",
-       "2020-12-31     30657       98628        zip        WA    WA    Goldendale   \n",
-       "2020-12-31     30657       98522        zip        WA    WA      Chehalis   \n",
-       "\n",
-       "            Home Value  \n",
-       "Date                    \n",
-       "2010-01-31    209250.0  \n",
-       "2010-01-31    257372.0  \n",
-       "2010-01-31    296430.0  \n",
-       "2010-01-31    271829.0  \n",
-       "2010-01-31    156704.0  \n",
-       "...                ...  \n",
-       "2020-12-31    220881.0  \n",
-       "2020-12-31         NaN  \n",
-       "2020-12-31    538209.0  \n",
-       "2020-12-31    112436.0  \n",
-       "2020-12-31         NaN  \n",
-       "\n",
-       "[386892 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 275,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_for_tab =  df_tableau.drop(columns=['RegionID', 'Metro', 'CountyName'], axis = 1)\n",
-    "df_for_tab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
-   "id": "aa604d12-0ebe-4352-9c4c-73687c62907a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_for_tab.to_csv('Data/data-tableau.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 14,
    "id": "343a2814-b261-43c1-9fd1-048d145d7e23",
    "metadata": {},
    "outputs": [],
    "source": [
     "## to Download this data in a “Data” folder\n",
-    "df_for_tab.to_csv('Data/data-for-tableau.csv')"
+    "df_tableau.to_csv('Data/data-for-tableau.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 308,
    "id": "99c3955d-7c1f-42f1-b0da-5dd8a91bb88c",
    "metadata": {},
    "outputs": [
@@ -2495,7 +2271,7 @@
        "      2020-12-31   99857.935728  13383.391304  98603.703214  408430.209929"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2508,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 287,
    "id": "e2a00daa-867f-4770-8d9e-2951be12f664",
    "metadata": {},
    "outputs": [
@@ -2578,7 +2354,7 @@
        "      2014-12-31  198551.493"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5768,20 +5544,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "191823d1-6e74-470b-a5cd-84ec9a9d9e86",
+   "cell_type": "markdown",
+   "id": "f375fdc7-7fe8-4fe4-a644-5f47cdf43956",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50fea101-a9cc-4f59-b140-04b4589220bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://public.tableau.com/views/HomeValueInUSA/ChoroplethMapoftheMedianHomeValuebyZipCode?:language=fr-FR&publish=yes&:sid=&:display_count=n&:origin=viz_share_link"
+   ]
   }
  ],
  "metadata": {
